--- a/src/renderer/settings-modal.html
+++ b/src/renderer/settings-modal.html
@@ -667,6 +667,19 @@
                         <div class="toggle-slider"></div>
                     </div>
                 </div>
+
+                <div class="setting-item">
+                    <div class="setting-left">
+                        <i data-lucide="sparkles" class="setting-icon"></i>
+                        <div class="setting-info">
+                            <div class="setting-name">Edge Glow Effect</div>
+                            <div class="setting-description">Show purple edge glow during Act mode</div>
+                        </div>
+                    </div>
+                    <div class="toggle-switch" id="edgeGlowToggle">
+                        <div class="toggle-slider"></div>
+                    </div>
+                </div>
             </div>
 
             <!-- System Section -->
@@ -674,6 +687,19 @@
                 <div class="section-title">
                     <i data-lucide="settings" style="width: 16px; height: 16px;"></i>
                     System
+                </div>
+
+                <div class="setting-item">
+                    <div class="setting-left">
+                        <i data-lucide="power" class="setting-icon"></i>
+                        <div class="setting-info">
+                            <div class="setting-name">Run on Startup</div>
+                            <div class="setting-description">Automatically start Control when computer turns on</div>
+                        </div>
+                    </div>
+                    <div class="toggle-switch" id="autoStartToggle">
+                        <div class="toggle-slider"></div>
+                    </div>
                 </div>
 
                 <!-- <div class="setting-item">
