fix/control-file upload-accessibility-rate-limit

--- a/src/renderer/chat-window.html
+++ b/src/renderer/chat-window.html
@@ -879,3 +879,4 @@ for the entire app
 - the storing of cached settings and cached account should still be fetched even if offline
 - check to ensure that the ai response is well interpreted and executed and displayed in the chat window 
 - refine the prompt to narrow the ai pov down to being a computer gui agent only
+- remove 89% of comments and leave 11% of highly important comments
