fix/control-file upload-accessibility-rate-limit

--- a/src/renderer/entry-window.html
+++ b/src/renderer/entry-window.html
@@ -514,7 +514,7 @@
                 </div>
                 <div class="feature-content">
                     <h3>Quick Toggle</h3>
-                    <p>Press Ctrl+Space to toggle chat. Alt+Z to stop current task.</p>
+                    <p id="hotkeyTipText">Press Ctrl+Space to toggle chat. Alt+Z to stop current task.</p>
                 </div>
             </div>
         </div>
