feat\key-change-settings

--- a/src/renderer/settings-modal.html
+++ b/src/renderer/settings-modal.html
@@ -751,7 +751,7 @@
                     </div>
                 </div>
 
-                <!-- <div class="setting-item">
+                <div class="setting-item">
                     <div class="setting-left">
                         <i data-lucide="eye" class="setting-icon"></i>
                         <div class="setting-info">
@@ -762,7 +762,7 @@
                     <div class="toggle-switch" id="floatingButtonToggle">
                         <div class="toggle-slider"></div>
                     </div>
-                </div> -->
+                </div>
 
                 <div class="setting-item">
                     <div class="setting-left">
