--- a/src/renderer/chat-window.html
+++ b/src/renderer/chat-window.html
@@ -116,6 +116,19 @@
             padding: 3px;
             gap: 2px;
             -webkit-app-region: no-drag;
+            animation: mode-toggle-pulse 2s ease-in-out infinite;
+        }
+
+        @keyframes mode-toggle-pulse {
+
+            0%,
+            100% {
+                box-shadow: 0 0 0 0 rgba(13, 13, 13, 0.2);
+            }
+
+            50% {
+                box-shadow: 0 0 8px 2px rgba(13, 13, 13, 0.15);
+            }
         }
 
         .mode-btn {
@@ -226,13 +239,13 @@
         }
 
         .message.action .message-content {
-            background: var(--action-bg);
+            background: transparent;
             border: 1px solid var(--action-border);
             border-radius: var(--radius-sm);
-            padding: 12px 14px;
+            padding: 6px 10px;
             display: flex;
             flex-direction: column;
-            gap: 4px;
+            gap: 2px;
             font-size: 13px;
             color: var(--text-secondary);
             width: 96%;
@@ -243,10 +256,11 @@
         .action-header {
             display: flex;
             align-items: center;
-            gap: 10px;
+            gap: 8px;
             font-weight: 600;
             color: var(--text-primary);
-            margin-bottom: 8px;
+            margin-bottom: 0;
+            position: relative;
         }
 
         .action-details {
@@ -255,17 +269,20 @@
             opacity: 0.8;
             white-space: pre-wrap;
             margin-top: 4px;
-            max-height: 300px;
-            overflow-y: auto;
-            transition: max-height 0.3s ease, opacity 0.3s ease, padding 0.3s ease;
-        }
-
-        .action-details.collapsed {
             max-height: 0;
             opacity: 0;
             padding: 0;
             margin: 0;
             overflow: hidden;
+            transition: max-height 0.3s ease, opacity 0.3s ease, padding 0.3s ease;
+        }
+
+        .action-details.expanded {
+            max-height: 300px;
+            opacity: 0.8;
+            padding-left: 0;
+            margin-top: 4px;
+            overflow-y: auto;
         }
 
         .action-toggle {
@@ -273,20 +290,21 @@
             border: none;
             color: var(--text-secondary);
             cursor: pointer;
-            padding: 0 4px;
+            padding: 0;
             font-size: 12px;
             transition: transform 0.3s ease;
             display: flex;
             align-items: center;
             justify-content: center;
+            margin-left: auto;
         }
 
         .action-toggle:hover {
             color: var(--text-primary);
         }
 
-        .action-toggle.collapsed {
-            transform: rotate(-90deg);
+        .action-toggle.expanded {
+            transform: rotate(180deg);
         }
 
         .action-icon {
@@ -794,7 +812,7 @@
                     <img src="../../assets/icons/icon-removebg-preview.png" alt="Control Logo" />
                 </div>
                 <h1 id="welcomeGreeting" class="welcome-greeting">Hello</h1>
-                <p class="welcome-subtext">How can I help you take control of your tasks today?</p>
+                <!-- <p class="welcome-subtext">How can I help you take control of your tasks today?</p> -->
             </div>
         </div>
 
