--- a/src/renderer/chat-window.html
+++ b/src/renderer/chat-window.html
@@ -188,6 +188,7 @@
             padding-bottom: 140px;
             -webkit-app-region: no-drag;
             background: var(--bg-primary);
+            scroll-behavior: smooth;
         }
 
         .message {
