--- a/src/renderer/settings-modal.html
+++ b/src/renderer/settings-modal.html
@@ -25,6 +25,7 @@
             color: #000000;
             -webkit-app-region: no-drag;
             background: transparent !important;
+            scroll-behavior: smooth;
         }
 
         .settings-container {
@@ -143,6 +144,7 @@
             touch-action: auto;
             overscroll-behavior: contain;
             max-height: 60vh;
+            scroll-behavior: smooth;
         }
 
         .settings-section {
