--- a/src/renderer/entry-window.html
+++ b/src/renderer/entry-window.html
@@ -32,6 +32,7 @@
             font-family: 'Inter', -apple-system, BlinkMacSystemFont, 'Segoe UI', sans-serif;
             color: var(--text-primary);
             overflow: hidden;
+            scroll-behavior: smooth;
         }
 
         /* Left Section */
@@ -44,6 +45,7 @@
             background: var(--bg-secondary);
             border-right: 1px solid var(--border-color);
             -webkit-app-region: drag;
+            scroll-behavior: smooth;
         }
 
         .app-title {
