--- a/src/renderer/settings-modal.html
+++ b/src/renderer/settings-modal.html
@@ -391,6 +391,14 @@
             border: 1px solid rgba(0, 0, 0, 0.1);
         }
 
+        /* Upgrade note for locked settings */
+        .upgrade-note {
+            color: #ef4444;
+            font-size: 12px;
+            font-weight: 600;
+            margin-top: 6px;
+        }
+
         .pin-title {
             font-size: 18px;
             font-weight: 600;
