--- a/src/renderer/main-overlay.html
+++ b/src/renderer/main-overlay.html
@@ -393,8 +393,10 @@
             top: 60px;
             left: 50%;
             transform: translateX(-50%);
-            background: rgba(102, 126, 234, 0.95);
-            color: white;
+            background: rgba(255, 255, 255, 0.15);
+            backdrop-filter: blur(10px);
+            -webkit-backdrop-filter: blur(10px);
+            color: rgb(255, 255, 255);
             padding: 12px 20px;
             border-radius: 50px;
             font-size: 13px;
@@ -402,7 +404,7 @@
             opacity: 0;
             pointer-events: none;
             z-index: 9998;
-            backdrop-filter: blur(10px);
+            /* backdrop-filter: blur(10px); */
             transition: opacity 0.3s ease, transform 0.3s ease;
             display: flex;
             align-items: center;
