--- a/src/renderer/entry-window.html
+++ b/src/renderer/entry-window.html
@@ -496,7 +496,7 @@
         
         <div class="app-title">Control</div>
         <div class="app-subtitle">Your intelligent AI assistant for computer control</div>
-        <img src="./assets/icons/icon-removebg-preview.png" alt="Logo" style="width: 64px; height: 64px; margin-bottom: 24px; -webkit-app-region: no-drag;">
+        <!-- <img src="./assets/icons/icon-removebg-preview.png" alt="Logo" style="width: 64px; height: 64px; margin-bottom: 24px; -webkit-app-region: no-drag;"> -->
 
         <div class="features-list">
             <div class="feature-item">
