--- a/src/renderer/chat-window.html
+++ b/src/renderer/chat-window.html
@@ -623,6 +623,11 @@
             min-height: 36px;
             font-family: 'Inter', sans-serif;
         }
+        chat-input::placeholder {
+            color: var(--text-secondary);
+            font-weight: 200;
+            font-size:smaller;
+        }
 
         .input-btn {
             width: 36px;
@@ -802,7 +807,7 @@
                 <div id="welcomeScreen" class="welcome-screen">
                     <img src="./assets/icons/icon-removebg-preview.png" class="welcome-logo" alt="Logo">
                     <h2 id="welcomeGreeting">Hello, I'm Control</h2>
-                    <p style="color: #64748b; font-size: 14px; margin-top: 8px;">How can I assist you with your desktop tasks today?</p>
+                    /* <p style="color: #64748b; font-size: 14px; margin-top: 8px;">How can I assist you with your desktop tasks today?</p> */
                 </div>
             </div>
 
