--- a/src/renderer/chat-window.html
+++ b/src/renderer/chat-window.html
@@ -614,8 +614,8 @@
             background: transparent;
             border: none;
             color: var(--text-primary);
-            font-size: 15px;
-            font-weight: 600;
+            font-size: 12px;
+            font-weight: 200;
             outline: none;
             padding: 8px;
             resize: none;
@@ -623,11 +623,11 @@
             min-height: 36px;
             font-family: 'Inter', sans-serif;
         }
-        chat-input::placeholder {
+        /* chat-input::placeholder {
             color: var(--text-secondary);
             font-weight: 200;
             font-size:smaller;
-        }
+        } */
 
         .input-btn {
             width: 36px;
@@ -718,7 +718,7 @@
             width: 64px;
             height: 64px;
             margin-bottom: 20px;
-            animation: bounce 2s infinite;
+            /* animation: bounce 2s infinite; */
         }
 
         @keyframes bounce {
@@ -807,7 +807,7 @@
                 <div id="welcomeScreen" class="welcome-screen">
                     <img src="./assets/icons/icon-removebg-preview.png" class="welcome-logo" alt="Logo">
                     <h2 id="welcomeGreeting">Hello, I'm Control</h2>
-                    /* <p style="color: #64748b; font-size: 14px; margin-top: 8px;">How can I assist you with your desktop tasks today?</p> */
+                    
                 </div>
             </div>
 
